[FIX] mail: reduce visibility of channel seen indicator
The icon was too pronunced, especially in white theme.
This commit reduces the opacity.

--- a/addons/mail/static/src/core/public_web/notification_item.dark.scss
+++ b/addons/mail/static/src/core/public_web/notification_item.dark.scss
@@ -9,7 +9,3 @@
         background-color: mix($o-gray-200, $o-gray-300) !important;
     }
 }
-
-.o-mail-NotificationItem-unreadIndicator {
-    opacity: 100%;
-}
