--- a/addons/mail/static/src/core/public_web/notification_item.scss
+++ b/addons/mail/static/src/core/public_web/notification_item.scss
@@ -46,7 +46,6 @@
 
 .o-mail-NotificationItem-unreadIndicator {
     color: darken($info, 5%);
-    opacity: 85%;
     font-size: 0.5rem;
     left: map-get($spacers, 2);
 }
